# game-of-cards

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ABOUT.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DECK_LOCATION.md  LICENSE  PERSONAS.md  README.md  goc.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/hooks/: deck_prompt_router.py  deck_session_start.py  pattern_generalization_check.py
.claude/skills/: _goc-bootstrap.sh
.codex/skills/: _goc-bootstrap.sh
.game-of-cards/: config.yaml  domain-examples.md  file-path-map.md
.game-of-cards/deck/: log.md
.game-of-cards/hooks/: extend-deck.md  finish-card.md
.github/workflows/: audit-deck.yml  ci.yml  marketplace-pin-check.yml  oidc-debug.yml  pages.yml  pull-card.yml  refine-deck.yml  release.yml
assets/: game-of-cards.excalidraw  how-it-works.excalidraw
claude-plugin/: README.md  pyproject.toml  settings.json  skills
claude-plugin/.claude-plugin/: plugin.json
codex-plugin/: README.md
docs/: cli.md
goc/: __init__.py  cli.py  engine.py  install.py
openclaw-plugin/: .gitignore  README.md  index.ts  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
scripts/: backfill_terminal_closed_at.py  port_skills_to_openclaw.py  release_rewrite_versions.py  set_cadence.py  smoke_release.sh  sync_plugin_assets.py
site/: index.html  llms.txt  privacy.html  stars.js  styles.css
tests/: test_active_notice_worker_scope.py  test_attest_automated_timeout.py  test_auto_populate_worker_empty_who.py  test_auto_populate_worker_git_missing.py  test_auto_populate_worker_preserves_where.py  test_board.py  test_briefing_body_dedup.py  test_close_succeeds_with_inbound_superseded_by.py  test_close_terminal_gate_guard.py  test_close_with_inbound_superseded_by.py  test_closed_at_canonical_form.py  test_closed_since_window_bounds.py  test_closure_gate_terminal_prereqs.py  test_closure_on_integration_git_error.py  test_codex_hooks_survive_upgrade.py  test_codex_plugin_bundled_cli.py  test_commit_flag_conflict_no_mutation.py  test_consuming_repo_tags_loader.py  test_decide_archives_deliberation.py  test_decide_blank_line_before_section.py  test_decide_repairs_terminal_gate.py  test_decide_rescope_reconciliation.py  test_decide_terminal_status_guard.py  test_dependency_advisory_helper.py  test_dod_fenced_checkbox.py  test_dod_rewrite_empty_fix.py  test_dod_rewrite_multiline_fix.py  test_dod_rewrite_preserves_indent.py  test_done_bundle.py  test_draft_auto_commit_excluded.py  test_draft_guard_and_lifecycle.py  test_draft_queue_visibility.py  test_empty_title_renderer_coercion.py  test_engine_module_singletons.py  test_git_auto_commit_pathspec.py  test_git_auto_commit_rebase_guard.py  test_gitattributes_generated_markers.py  test_global_flag_collision.py  test_guidance_accuracy.py  test_install.py  (+68 more)
(+1751 files in other folders)
