[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "game-of-cards"
version = "0.0.1"
description = "Agile substrate for human + AI-agent swarms — story-cards as the runtime when nobody remembers yesterday."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Zauberzeug GmbH", email = "info@zauberzeug.com" },
]
keywords = ["agile", "kanban", "xp", "ai-agents", "agentic-workflow", "substrate", "claude-code", "agents-md", "methodology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/zauberzeug/game-of-cards"
Repository = "https://github.com/zauberzeug/game-of-cards"
Issues = "https://github.com/zauberzeug/game-of-cards/issues"

[project.scripts]
goc = "goc.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["goc"]

[tool.hatch.build.targets.wheel.force-include]
"goc/schema.yaml" = "goc/schema.yaml"
